README.md updated

--- a/worker.html
+++ b/worker.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RavJS Client</title>
+    <title>RavJS Worker</title>
 
     <!--CSS Dependencies -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
           crossorigin="anonymous">
-    <style href="static/css/main.css" type="text/css"></style>
 
     <!-- Javascript dependencies-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -29,7 +28,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 text-center">
-            RavJS Client
+            RavJS Worker
         </div>
     </div>
 </div>
