--- a/worker.html
+++ b/worker.html
@@ -6,17 +6,101 @@
     <!--CSS Dependencies -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: rgba(236, 240, 241, 0.5);
+            font-family: 'Poppins', serif;
+        }
+
+        #graphs {
+            display: none;
+        }
+
+        #spinnerGraphs {
+            display: block;
+            margin-bottom: 1em;
+        }
+
+        .card {
+            border-radius: 5px;
+            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        }
+
+    </style>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h2>RavJS Worker</h2>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">RavJS Worker</a>
 
-        <div>
-            <h3 class="text-center">Status</h3>
-            <h4 id="client_status" class="text-center">Disconnected</h4>
+        <div style="float: right;">
+            Status:
+            <span id="client_status" class="text-center" style="color:red;">Disconnected</span> &nbsp;&nbsp;
+            <button type="button" class="btn btn-outline-secondary btn-sm" id="disconnectButton">Disconnect</button>
+        </div>
+    </div>
+</nav>
+<div class="container" style="margin-top: 1em;">
+    <div class="row">
+        <div class="card" style="margin-bottom: 1em;border: none;">
+            <div class="card-body">
+                <h5 class="card-title">Federated Learning Models</h5>
+                <div class="card-text">
+                    <div class="spinner-grow" role="status" id="spinnerGraphs">
+                    </div>
+
+                    <table class="table table-bordered" id="graphs">
+                        <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Algorithm</th>
+                            <th scope="col">Approach</th>
+                            <th scope="col">Rules</th>
+                            <th scope="col">Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="card" style="margin-bottom: 1em;border: none;">
+            <div class="card-body">
+                <h5 class="card-title" style="display: inline;">Distributed Learning Models</h5>
+                <button type="button" style="float: right; margin-top: 1em;margin-right: 1em;"
+                        class="btn btn-outline-success" id="participateButton">Participate
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" tabindex="-1" id="enterValuesModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Enter values</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3">
+                        <label for="inputValues">Values*</label><input type="text" class="form-control"
+                                                                       id="inputValues"/>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-success" id="submitValuesButton">Submit</button>
+            </div>
         </div>
     </div>
 </div>
@@ -26,9 +110,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-<script src="tf.js"></script>
-<script src="math.js"></script>
-<script src="socket.io-4.3.2.js"></script>
-<script src="raven.js" type="application/javascript"></script>
+<script src="{{static('/tf.js')}}"></script>
+<script src="{{static('/math.js')}}"></script>
+<script src="{{static('/socket.io-4.3.2.js')}}"></script>
+<script src="{{static('/raven.js')}}" type="application/javascript"></script>
 </body>
 </html>
