Federated learning table removed

--- a/worker.html
+++ b/worker.html
@@ -44,7 +44,7 @@
     </div>
 </nav>
 <div class="container" style="margin-top: 1em;">
-    <div class="row">
+    <div class="row" style="display: none;">
         <div class="card" style="margin-bottom: 1em;border: none;">
             <div class="card-body">
                 <h5 class="card-title">Federated Learning Models</h5>
