--- a/worker.html
+++ b/worker.html
@@ -2,117 +2,312 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://xxxx 'unsafe-inline' 'unsafe-eval';">
+    <meta http-equiv="X-Content-Security-Policy" content="script-src 'self' http://xxxx 'unsafe-inline' 'unsafe-eval';">
     <title>RavJS Worker</title>
+
     <!--CSS Dependencies -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{{static('/css/bootstrap.min.css')}}" rel="stylesheet" />
+    <link href="{{static('/css/dropzone.min.css')}}" rel="stylesheet" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <style>
-        body {
-            background-color: rgba(236, 240, 241, 0.5);
-            font-family: 'Poppins', serif;
+        * {
+            font-family: 'Poppins', sans-serif;
         }
 
-        #graphs {
+        body {
+            background-color: rgba(236, 240, 241, 0.5);
+        }
+
+        .card {
+            margin-top: 2em;
+            margin-bottom: 2em;
+            border-radius: 2px;
+            border: 1px solid rgba(150, 150, 150, 0.1);
+            box-shadow: 0 5px 10px rgba(154, 160, 185, .05), 0 15px 40px rgba(166, 173, 201, .2);
+        }
+
+        input {
+            border-radius: 1px;
+        }
+
+        #clientIdForm {
+            display: none;
+        }
+
+        #graphsCard {
             display: none;
         }
 
         #spinnerGraphs {
-            display: block;
+            display: none;
             margin-bottom: 1em;
         }
 
-        .card {
+        #graphsTable {
+            display: none;
+            margin-top: 2em;
+        }
+
+        #graphsTable td {
+            text-transform: capitalize;
+        }
+
+        #logoutButton {
+            color: #dc3545;
+        }
+
+        #loginButton {
+            color: #007bff;
+        }
+
+        #loginButton:hover, #logoutButton:hover {
+            color: white;
+        }
+
+        #showErrorMessage {
+            display: block;
+            margin-top: 2em;
+        }
+
+        .btn {
+            border-radius: 1px;
+        }
+
+        #connectDisconnectButton {
+            display: none;
+        }
+
+        #activeGraphs {
+            display: none;
+        }
+
+        #activeGraphs .card-text p, #pastGraphs .card-text p {
+            background-color: #e3f2fd;
             border-radius: 5px;
-            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+            padding: 5px 10px;
+        }
+
+        #graphCard {
+            display: none;
+        }
+
+        #graphCard .card-body {
+            padding-bottom: 3em;
+        }
+
+        .rulesContainer {
+            margin-top: 1em;
+            margin-bottom: 3em;
+            border: 1px solid rgba(150, 150, 150, 0.5);
+            padding: 1em;
+            border-radius: 5px;
+        }
+
+        .rulePill {
+            border: 1px solid rgba(100, 100, 100, 0.1);
+            padding: 5px 1em;
+            border-radius: 50px;
+            color: rgba(0, 0, 0, 0.7);
+            background-color: #e3f2fd;
+            display: none;
+            margin-left: 1em;
+        }
+
+        .rulePill .value {
+            border-left: 1px solid rgba(100, 100, 100, 0.1);
+            margin-left: 0.5em;
+            padding-left: 0.5em;
+            color: rgba(0, 0, 0, 0.7);
+        }
+
+        #reloadGraphsButton {
+            cursor: pointer;
+        }
+
+        #pastGraphs {
+            display: none;
         }
 
     </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" href="#">RavJS Worker</a>
-
-        <div style="float: right;">
-            Status:
-            <span id="client_status" class="text-center" style="color:red;">Disconnected</span> &nbsp;&nbsp;
-            <button type="button" class="btn btn-outline-secondary btn-sm" id="disconnectButton">Disconnect</button>
-        </div>
+<div class="navbar navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
+    <div class="navbar-header pull-left">
+        <a class="navbar-brand" style="margin-left: 1em;"><img src="./logo.webp" alt="" width="auto" height="20">&nbsp;Ravjs</a>
     </div>
-</nav>
-<div class="container" style="margin-top: 1em;">
-    <div class="row" style="display: none;">
-        <div class="card" style="margin-bottom: 1em;border: none;">
-            <div class="card-body">
-                <h5 class="card-title">Federated Learning Models</h5>
-                <div class="card-text">
-                    <div class="spinner-grow" role="status" id="spinnerGraphs">
+    <div class="navbar-header pull-right" style="margin-right: 2em;">
+        <ul class="nav" id="loggedInNav" style="display: none;">
+            <li class="nav-item" style="border-right: 1px solid rgba(0,0,0,0.5)">
+                <span id="clientIdShow" class="nav-link" style="color: black;">Client Id:&nbsp;<span
+                        class="clientIdValue"></span></span>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" id="showGraphsButton" href="#">Graphs</a>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="btn btn-sm btn-outline-danger nav-link" id="logoutButton">Logout</button>
+            </li>
+        </ul>
+
+        <ul class="nav" id="loggedOutNav">
+            <li class="nav-item">
+                <button type="button" id="loginButton" class="btn btn-outline-primary">Login</button>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<div class="container">
+    <br/>
+    <div class="row" style="position: relative;">
+        <div class="col-md-9">
+            <div style="margin-bottom: 1em;" id="graphsCard">
+                <div style="position: relative;">
+                    <h3 style="margin-left: 0.1em;">Graphs <img src="{{static('/images/reload.png')}}" id="reloadGraphsButton" width="30" height="auto"
+                                    style="float: right" alt="reload"/></h3>
+                    <h5 style="margin-left: 0.1em;">List of available graphs</h5>
+                    <div class="graphsList">
+                    </div>
+                    <div id="showErrorMessage" class="text-center">
+                        <p class="message alert alert-warning" role="alert">Connect to Ravsock to load graphs</p>
                     </div>
 
-                    <table class="table table-bordered" id="graphs">
-                        <thead>
-                        <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">Name</th>
-                            <th scope="col">Algorithm</th>
-                            <th scope="col">Approach</th>
-                            <th scope="col">Rules</th>
-                            <th scope="col">Actions</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                    <div id="spinnerGraphs">
+                        <div>
+                            <h5 class="text-center">Loading...</h5>
+                            <div>
+                                <div class="text-center">
+                                    <div class="spinner-grow" role="status"
+                                         style="margin-top: 1em;margin-bottom: 1em;">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="text-center">
+                <button class="btn btn-outline-primary" id="connectDisconnectButton" data-status="disconnected">
+                    Connect
+                </button>
+            </div>
+            <div class="card" style="margin-bottom: 1em;" id="activeGraphs">
+                <div class="card-body" style="position: relative;">
+                    <h5 class="card-title">Active Graphs</h5>
+                    <div class="card-text">
+                        <p>
+                            No active graphs
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="margin-bottom: 1em;" id="pastGraphs">
+                <div class="card-body" style="position: relative;">
+                    <h5 class="card-title">Past Graphs</h5>
+                    <div class="card-text">
+                        <p>
+                            No past graphs
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card" style="margin-bottom: 1em;" id="clientIdForm">
+            <div class="card-body">
+                <h5 class="card-title">Client Id</h5>
+                <div class="card-text">
+                    <form>
+                        <div class="mb-3">
+                            <label for="clientIdInput" class="form-label">Enter Client Id</label>
+                            <input type="text" class="form-control" id="clientIdInput" aria-describedby="clientIdHelp"
+                                   required>
+                            <div id="clientIdHelp" class="form-text">Enter your unique client id. It can be your email,
+                                mobile number or any other unique id.
+                            </div>
+                        </div>
+                        <div class="text-end">
+                            <button type="submit" id="clientIdButton" class="btn btn-outline-primary">Next</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="row">
-        <div class="card" style="margin-bottom: 1em;border: none;">
-            <div class="card-body">
-                <h5 class="card-title" style="display: inline;">Distributed Learning Models</h5>
-                <button type="button" style="float: right; margin-top: 1em;margin-right: 1em;"
-                        class="btn btn-outline-success" id="participateButton">Participate
-                </button>
+<div class="card" id="graphCard">
+    <div class="card-body" style="position:relative;">
+        <h5 class="card-title"></h5>
+        <div class="card-text">
+            <div class="graphId" style="color: gray;margin-top: 1em"></div>
+            <div class="algorithm" style="color: gray;"></div>
+            <span style="position:absolute; top: 1em;right: 1em;" class="approach"></span>
+            <button style="position: absolute;bottom: 1em;right: 1em;" type='button'
+                    class='btn btn-outline-success participateButton'>Participate
+            </button>
+            <div class="row">
+            </div>
+            <div class="rulesContainer">
+
+                <h4 class="text-center">Rules</h4>
+                <div class="rules">
+                </div>
+
             </div>
         </div>
     </div>
 </div>
-<div class="modal" tabindex="-1" id="enterValuesModal">
+
+<div class="modal" tabindex="-1" id="addDataModal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Enter values</h5>
+                <h5 class="modal-title">Add Data</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="padding: 2em;">
                 <form>
                     <div class="mb-3">
-                        <label for="inputValues">Values*</label><input type="text" class="form-control"
-                                                                       id="inputValues"/>
+                        <label for="inputData" style="margin-bottom: 1em;">Enter data manually</label>
+                        <input type="text" class="form-control" id="inputData"/>
                     </div>
                 </form>
+                <div class="text-center">
+                    Or
+                </div>
+                <p>Upload data file</p>
+                <form class="dropzone" id="my-great-dropzone"></form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-success" id="submitValuesButton">Submit</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" id="closeModalButton">Close
+                </button>
+                <button type="button" class="btn btn-outline-success" id="addDataButton">Add</button>
             </div>
         </div>
     </div>
 </div>
-<!-- Javascript dependencies-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 
-<script src="{{static('/tf.js')}}"></script>
-<script src="{{static('/math.js')}}"></script>
-<script src="{{static('/socket.io-4.3.2.js')}}"></script>
-<script src="{{static('/raven.js')}}" type="application/javascript"></script>
+<span class="rulePill"><span class="key"></span><span class="value"></span></span>
+
+<!-- Javascript dependencies-->
+<script src="{{static('/js/jquery-3.6.0.min.js')}}"></script>
+<script src="{{static('/js/bootstrap.bundle.min.js')}}"></script>
+<script src="{{static('/js/dropzone-min.js')}}"></script>
+<script src="{{static('/js/sweetalert2@11.js')}}"></script>
+<script src="{{static('/js/tf.js')}}"></script>
+<script src="{{static('/js/math.js')}}"></script>
+<script src="{{static('/js/socket.io-4.3.2.js')}}"></script>
+<script src="{{static('/config.js')}}" type="application/javascript"></script>
+<script src="{{static('/js/connection.js')}}" type="application/javascript"></script>
+<script src="{{static('/js/view.js')}}" type="application/javascript"></script>
+<script src="{{static('/js/raven.js')}}" type="application/javascript"></script>
 </body>
 </html>
